objects/Case.object
<CustomObject>
    <fields>
        <fullName>PRXChildCount__c</fullName>
        <label>PRXChildCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRXConCatString__c</fullName>
        <formula>TEXT(Type)  &amp;  TEXT(Origin)</formula>
        <label>PRXConCatString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Category__c</fullName>
        <description>Case Category</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Conclusion_details__c</fullName>
        <label>Conclusion details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRX_Detail__c</fullName>
        <description>Case Detail</description>
        <label>Detail</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Enforce_Closure_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to enforce mandatory close checks</description>
        <label>PRX Enforce Closure Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRX_MultiPicklist__c</fullName>
        <label>PRX MultiPicklist</label>
        <picklist>
            <picklistValues>
                <fullName>Test1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PRX_Non_First_time_right_reason_s__c</fullName>
        <label>Non First time right reason(s)</label>
        <picklist>
            <controllingField>PRX_Quality_feedback__c</controllingField>
            <picklistValues>
                <fullName>Test1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PRX_Order_Reference__c</fullName>
        <description>Order Reference</description>
        <label>Order Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PRX_Quality_feedback__c</fullName>
        <label>Quality feedback</label>
        <picklist>
            <picklistValues>
                <fullName>First time right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non first time right</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_Quantity__c</fullName>
        <description>Quantity</description>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRX_Ready_For_Service__c</fullName>
        <description>Ready for service</description>
        <label>Ready For Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRX_SLA_Flag__c</fullName>
        <formula>&quot;TBD&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Service_Request_Date__c</fullName>
        <description>Service Request Date</description>
        <label>Service Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRX_Sub_Category__c</fullName>
        <description>Case Sub Category</description>
        <label>Sub Category</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_as_per_Role_Hierarchy__c</fullName>
        <formula>CONTAINS( Owner:User.UserRole.Name ,  $UserRole.Name ) &amp;&amp; (( Owner:User.UserRole.Name!=$UserRole.Name  &amp;&amp;  OwnerId != $User.Id  )||( OwnerId == $User.Id ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record as per Role Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllCases</fullName>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Dummy_Case_QueueTBD_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Dummy_Case_Queue[TBD]</label>
        <queue>Dummy_Case_QueueTBD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dummy_Case_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Dummy_Case_Queue[TBD]</label>
        <queue>Dummy_Case_QueueTBD</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Sample_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Sample Cases</value>
        </filters>
        <label>Sample Cases</label>
    </listViews>
    <listViews>
        <fullName>Trial_Activities</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Trial</value>
        </filters>
        <label>Trial Activities</label>
    </listViews>
    <listViews>
        <fullName>test_role_record</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_as_per_Role_Hierarchy__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>test role record</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>PRX_CaseConclusion_required</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( $Label.PRXTypeOrgin, TEXT(Type)  &amp;  TEXT(Origin) )</errorConditionFormula>
        <errorMessage>yo2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_Select_Non_first_time_right_reasons</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR($Profile.Name =&quot;System Administrator&quot;, $Profile.Name =&quot;PRX_Sales User Profile&quot;,$Profile.Name =&quot;PRX_Sales Support user&quot;), 
 ISPICKVAL(Status,&quot;Closed&quot;) ,
 ISPICKVAL(PRX_Quality_feedback__c ,&quot;Non first time right&quot;),
  ISBLANK(PRX_Non_First_time_right_reason_s__c))</errorConditionFormula>
        <errorDisplayField>PRX_Non_First_time_right_reason_s__c</errorDisplayField>
        <errorMessage>Please select Non First time right reason(s) field values before closing case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_Select_Quality_feedback</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR($Profile.Name =&quot;System Administrator&quot;, $Profile.Name =&quot;PRX_Sales User Profile&quot;,$Profile.Name =&quot;PRX_Sales Support user&quot;), 
 ISPICKVAL(Status,&quot;Closed&quot;) ,ISPICKVAL(PRX_Quality_feedback__c ,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>PRX_Quality_feedback__c</errorDisplayField>
        <errorMessage>Please select quality feedback field before closing the case.</errorMessage>
    </validationRules>
</CustomObject>